@@ -1,7 +1,8 @@
 # Offpunk History
 
 ## 1.2 - Unreleased
-- "set beta true" allows to test the new HTML renderer
+- Completely rewritten the HMTL, Gemtext and Gopher renderer. Tests needed!
+- Removed dependancy to ansiwrap. We don’t use it anymore (which is important)
 - Limit width of --sync output
 - Fixed a crash when trying to save a folder
 
